--- a/src/visualobjects/VisualObject/Text.template.ejs
+++ b/src/visualobjects/VisualObject/Text.template.ejs
@@ -4,9 +4,10 @@
 
 <style>
 .box<%= id %> {
-    font: <%= Font.font %>;
-    size: <%= Font.size %>px;
-    color: '<%= Font.color.hex %>';
+    font-family: <%= Font.font %>;
+    font-size: <%= Font.size %>px;
+    color: <%= Font.color.hex %>;
+    background-color: <%= Background.color.hex %>;
     width: <% if(!Dimensions.widthAuto) { %><%= Dimensions.width %>px<% } else { %>auto<% } %>;
     height: <% if(!Dimensions.heightAuto) { %><%= Dimensions.height %>px<% } else { %>auto<% } %>;
     position: <%= Transform.position %>;
