--- a/src/visualobjects/VisualObject/Text.template.ejs
+++ b/src/visualobjects/VisualObject/Text.template.ejs
@@ -14,6 +14,6 @@
     top: <%= Transform.top %>px; 
     left: <%= Transform.left %>px;
     z-index: <%= Transform.zIndex %>;
-    transform: scale(<%= Transform.scale %>);
+    transform: scale(<%= Transform.scale %>) rotate(<%= Transform.rotate %>deg);
 }
 </style>
