--- a/public/styles/docs.css
+++ b/public/styles/docs.css
@@ -16,6 +16,7 @@ body{
 
 h2 {
     margin: 20px 0 !important;
+    margin-top: 40px !important;
     font-size: 24px !important; 
     font-weight: 700 !important;
     color: #151515;
@@ -57,4 +58,57 @@ p {
     tab-size: 4;
     -webkit-hyphens: none;
     hyphens: none;
+}
+
+.anchor ul{
+    content: "";
+    left: 0;
+    width: 2px;
+    background: #efefef;
+}
+
+.anchor li {
+    display: block;
+    position: relative;
+    padding-left: 30px;
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 6px;
+}
+
+.anchor li :before{
+    border-radius: 50%;
+    transform: translateY(-50%);
+    content: "";
+    background: #fdfdfd;
+    border: 2px solid #efefef;
+    left: -4px;
+    width: 10px;
+    height: 10px;
+    top: 50%;
+    display: inline-block;
+    position: absolute;
+}
+
+.anchor li a {
+    color: #404040;
+    text-decoration: none;
+    margin-top: -20px;
+}
+
+.anchor li a:hover {
+    color: cornflowerblue;
+}
+
+.current a:before {
+    background: cornflowerblue;
+    border-color: cornflowerblue;
+    border-width: 1px;
+    left: -3px;
+    color: cornflowerblue;
+    font-weight: 600;
+}
+
+.hljs{
+    border-radius: 10px;
 }
