--- a/views/docs/footer.ejs
+++ b/views/docs/footer.ejs
@@ -1,4 +1,4 @@
-<div class="h-28 w-full bg-neutral-800 text-center -m-4 mt-6 text-white text-sm align-middle" style="font-size: 12px;">
+<div class="h-28 w-full bg-neutral-800 text-center -m-4 mt-6 text-white text-sm align-middle shadow-lg" style="font-size: 12px;">
     <div class="align-middle text-center mr-2 text-white pt-6 pb-2">
         <a 
             href="https://github.com/ucsjs" 
