--- a/views/docs/index.ejs
+++ b/views/docs/index.ejs
@@ -13,7 +13,7 @@
 
     <body>
         <div id="app">
-            <div class="bg-neutral-800 h-16 top-0 w-full fixed flex z-50">
+            <div class="bg-neutral-800 h-16 top-0 w-full fixed flex z-50 shadow-lg">
                 <div class="w-60">
                     <img src="/logo_invert.png" class="h-16 p-4" />
                 </div>
