--- a/views/docs/index.ejs
+++ b/views/docs/index.ejs
@@ -54,7 +54,7 @@
                         <%- include('../../views/docs/breadcrumb'); -%>
                         <%- include('../../views/docs/anchors'); -%>
 
-                        <div class="content">
+                        <div class="content max-w-screen-lg">
                             <%- index -%>
                         </div>
                     </div>
