--- a/views/docs/anchors.ejs
+++ b/views/docs/anchors.ejs
@@ -2,7 +2,7 @@
     <ul role="list" id="anchors">
         <% anchors.forEach((item) => { %>
         <li>
-            <a href="#<%= item.id %>" class="text-sm font-medium text-gray-500 hover:text-gray-700"><%= item.id %></a>
+            <a href="#<%= item.id %>" class="text-sm font-medium text-gray-500 hover:text-gray-700"><%= item.label %></a>
         </li>
         <% }); %>
     </ul>
