--- a/views/docs/index.ejs
+++ b/views/docs/index.ejs
@@ -15,7 +15,9 @@
         <div id="app">
             <div class="bg-neutral-800 h-16 top-0 w-full fixed flex z-50 shadow-lg">
                 <div class="w-60">
-                    <img src="/logo_invert.png" class="h-16 p-4" />
+                    <a href="/" title="UCS.js">
+                        <img src="/logo_invert.png" class="h-16 p-4" />
+                    </a>
                 </div>
 
                 <div class="justify-between text-center w-full">
