--- a/public/styles/docs.css
+++ b/public/styles/docs.css
@@ -10,6 +10,10 @@ body{
     overflow-x: hidden;
 }
 
+img {
+    border-radius: 10px;
+}
+
 * {
     scrollbar-width: auto;
     scrollbar-color: #171717 #000000;
