--- a/src/visualobjects/VisualObject/Core/Box.template.ejs
+++ b/src/visualobjects/VisualObject/Core/Box.template.ejs
@@ -1,3 +1,1 @@
-<div ref="<%= id %>" class="<%= styleId %>">
-    <%- slot -%>
-</div>
+<div ref="<%= id %>" class="<%= styleId %>"><%- slot -%></div>
