--- a/src/visualobjects/VisualObject/Core/Text.template.ejs
+++ b/src/visualobjects/VisualObject/Core/Text.template.ejs
@@ -1,3 +1,3 @@
 <div ref="<%= id %>" class="<%= styleId %>">
-    <span ref="Content_content"><%= Content.text %></span>
+    <span ref="Content_content"><%= Content.text.content %></span>
 </div>
