--- a/src/visualobjects/VisualObject/Form/Button.template.ejs
+++ b/src/visualobjects/VisualObject/Form/Button.template.ejs
@@ -6,5 +6,5 @@
 <% if(Button && Button.icon && Button.icon.icon){ %>
 <i class="<%= Button.icon.icon %>" style="margin-right:5px"></i>
 <% } %>
-<%= Content.text %>
+<%= Content.text.content %>
 </button>
