--- a/src/visualobjects/VisualObject/Core/Image.template.ejs
+++ b/src/visualobjects/VisualObject/Core/Image.template.ejs
@@ -3,4 +3,5 @@
     class="<%= styleId %>"
     src="<%= Image.image.src %>" 
     alt="<%= Image.alt %>"
+    :style="<%= JSON.stringify(style) %>"
 />
