--- a/src/visualobjects/VisualObject/Core/Container.template.ejs
+++ b/src/visualobjects/VisualObject/Core/Container.template.ejs
@@ -1,1 +1,1 @@
-<div ref="<%= id %>" class="<%= styleId %>"><%- slot -%></div>
+<div ref="<%= id %>" :style="<%= JSON.stringify(style) %>" class="<%= styleId %>"><%- slot -%></div>
